src/components/Navbar.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

.navbar{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 12px 7%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    background: rgba(255, 255, 255, 0.35);
    backdrop-filter: blur(14px);
    -webkit-backdrop-filter: blur(14px);
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
    transition: all 0.3s ease;
}

.dark .navbar{
    background: rgba(15, 23, 42, 0.6);
    color: #fff;
    border-bottom: 1px solid rgba(255, 255, 255, 0.08);
}

.navbar a {
  color: white;
  text-decoration: none;
}

.light .navbar a{
  color: black;
}

.controls{
    display: flex;
    align-items: center;
    gap: 20px;
}

.toggleicon{
    width: 45px;
    cursor: pointer;
}

.musicButton{
    width: 30px;
    height: 30px;
    cursor: pointer;
}

.nav-links{
    flex: 1;
    list-style: none;
    text-align: center;
    z-index: 999;
}

.nav-links li{
    display: inline-block;
    margin: 0 15px;
    width: 80px;
    height: 40px;
    line-height: 40px;
    text-align: center;
    cursor: pointer;
    transition: transform 0.3s ease, color 0.3s ease;
}

.nav-links li:hover{
    transform: scale(1.2);
    color: #4ca6fc;
    opacity: 0.7;
}

.light .nav-links li:hover{
    color: #000272;
}
.hamburger{
  display: none;
  flex-direction: column;
  cursor: pointer;
  gap: 5px;
}

.hamburger span{
  width: 25px;
  height: 3px;
  background: currentColor;
  border-radius: 3px;
  transition: 0.3s;
}
@media (max-width: 900px){

  .hamburger{
    display: flex;
  }

  .navbar{
    flex-wrap: wrap;
    align-items: flex-start;
  }

  .nav-links{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;

    max-height: 0;
    overflow: hidden;
    transition: max-height 0.4s ease;
  }

  .nav-links.open{
    max-height: 500px;
  }

  .nav-links li{
    display: block;
    margin: 15px 0;
    font-size: 20px;
  }
  .controls{
    margin-left: auto;
  }
}

